<resources>
    <string name="app_name">RDV_App_Meunier_Nicolas</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="TvNoItems" translatable="false">TvNoItems</string>
    <string name="pick_date">Pick Date</string>
    <string name="_1_day">1 DAY</string>
    <string name="retour">Back</string>
    <string name="_3_days">3 DAYS</string>
    <string name="_1_week">1 WEEK</string>

    <string name="add">Save</string>
    <string name="add_rdv">Appointment</string>
    <string name="call">Call</string>
    <string name="contact">Contact</string>
    <string name="pick_time">Pick Time</string>
    <string name="gmap">GMAP</string>
    <string name="search">Search</string>

    <string name="Index">Index : </string>
    <string name="Title"> | Title : </string>
    <string name="Date">Date : </string>
    <string name="Time"> | Time : </string>
    <string name="Address">Address : </string>
    <string name="Phone">Phone : </string>
    <string name="Contact"> | Contact : </string>

    <string name="StringTitle">Title</string>
    <string name="StringDate">Date</string>
    <string name="StringTime">Time</string>
    <string name="StringAddress">Address</string>
    <string name="StringPhone">Phone</string>
    <string name="StringContact">Contact</string>
    <string name="choose_reminder">Choose Reminder :</string>
    <string name="StringTime2">Time</string>
    <string name="StringAdresse2">Address</string>
    <string name="StringPhone2">Phone</string>
    <string name="StringContact2">Contact</string>
    <string name="StringTitle2">Title</string>
    <string name="StringDate2">Date</string>
    <string name="StringId2">Id</string>
    <string name="StringBtn">Done</string>
    <string name="menu1_name">RDV App Manager</string>
    <string name="menu2_name">Manage your RDV</string>
    <string name="StringToDo2">TO DO</string>
    <string name="DoneString">ToDo/Done</string>
    <string name="ToDoString">TO DO</string>
    <string name="NotDoneString">TO DO</string>

</resources>